test_programs/compile_failure/dep_submodule_overlap/src/lib.nr
pub(crate) struct MyStruct {
    inner: Field
}
